Fixed image not showing in git hub pages.

--- a/main.css
+++ b/main.css
@@ -183,6 +183,17 @@ li a:hover {
     color: #454545;
 	margin-top: 35px;
 }
+#main6 {
+	width: 100%;  
+	color: #000000;
+	padding-bottom: 10px; 
+    font-family: "Libre Baskerville"; 
+    font-size: 16.80px;
+    font-weight: 400;
+	margin-bottom: -6px;
+	margin-left: 40px;
+	line-height: 1.75;
+}
 .quotes {
     font-family: Montserrat; 
     font-size: 16.80px;	
